--- a/codigo-fonte/area-logada/adicionar-registro/adicionar-registro.css
+++ b/codigo-fonte/area-logada/adicionar-registro/adicionar-registro.css
@@ -1,23 +1,99 @@
 body {
-  margin: 0;
+    margin: 0;
+    background-color: #FFFFFF;
+    font-family: 'Poppins', sans-serif;
+  }
+  
+  .container-pagina {
+    font-family: 'Poppins', sans-serif;
+    padding: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    width: 100%;
+  }
+  
+  .container-linha {
+    display: flex;
+    align-items: end;
+    flex-direction: row;
+    gap: 460px;
+    margin: 20px;
+  }
+  
+  .campo-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .field{
+    background-color: #CECECE;
+    border-radius: 50px;
+    padding: 30px;
+    width: 250%
+  }
+
+  .anexo{
+    background-color: #CECECE;
+    border-radius: 50px;
+    padding: 30px;
+    width: 160%
+  }
+
+  .setor{
+    background-color: #CECECE;
+    border-radius: 50px;
+    padding: 30px;
+    width: 185%
+  }
+  .container-linha3{
+    display: flex;
+    align-items: end;
+    flex-direction: row;
+    gap: 515px;
+    margin: 20px;
+  }
+
+  .tempo{
+    background-color: #CECECE;
+    border-radius: 50px;
+    padding: 30px;
+    width: 320%
+  }
+
+  .tipo{
+    background-color: #CECECE;
+    border-radius: 50px;
+    padding: 30px;
+    width: 275%
+  }
+
+  #menu li{
+    display: flex;
+    float: right;
 }
 
-.container-pagina {
-  padding: 32px;
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  width: 100%;
+  #menu li a{
+    color: black;
+    text-decoration: none;
+    padding: 20px;
+}
+  
+  #menu li a:hover{
+  color: #DFC13F;
+  }
+
+  .botao{
+    display: flex;
+    align-items: end;
+    flex-direction: column;
+    margin-right: -35%;
+  }
+
+  button{
+    background-color: #4D464C;
+    color: #FFFFFF;
+    width: 15%;
+    padding: 15px;
 }
 
-.container-linha {
-  display: flex;
-  align-items: end;
-  flex-direction: row;
-  gap: 10px;
-}
-
-.campo-container {
-  display: flex;
-  flex-direction: column;
-}
