--- a/codigo-fonte/area-logada/sobre/sobre.css
+++ b/codigo-fonte/area-logada/sobre/sobre.css
@@ -64,7 +64,7 @@ body {
     list-style: none;
     display: flex;
     justify-content: flex-end;
-    padding: 0;
+    padding: 16px;
     margin: 0;
     margin-right: 10px;
 }
