--- a/codigo-fonte/area-logada/adicionar-registro/adicionar-registro.css
+++ b/codigo-fonte/area-logada/adicionar-registro/adicionar-registro.css
@@ -1,108 +1,293 @@
-body {
-  margin: 0;
-  background-color: #ffffff;
-  font-family: "Poppins", sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,200;9..40,300&family=Poppins:wght@500&display=swap');
+@media screen and (max-width: 1200px) {
+
+  body {
+    margin: 0;
+    background-color: #ffffff;
+    font-family: "Poppins", sans-serif;
+  }
+
+  /*menu*/
+  .menu {
+    width: 100%;
+    text-align: right;
+    list-style: none;
+    display: flex;
+    justify-content: flex-end;
+    padding: 16px;
+    margin: 0;
+    margin-right: 10px;
+    background-color: #4D4C4C;
+    flex-direction: row;
+    align-items: center;
+    padding: 12px 12px;
+  }
+
+  .menu li {
+    margin-right: 18px;
+    color: #ffffff;
+    cursor: pointer;
+    font-weight: bold;
+    margin-top: 0px;
+    transition: color 0.3s, text-shadow 0.3s;
+
+  }
+
+  a:link {
+    text-decoration: none;
+    color: #FFFFFF;
+  }
+
+  a:visited {
+    color: #FFFFFF;
+  }
+
+  a:hover {
+    color: #DFC13F;
+    /* Altera a cor do texto ao passar o mouse */
+  }
+
+  /*TÍTULO E CAMPOS DE PREENCHIMENTO*/
+  .container-pagina {
+    font-family: "Poppins", sans-serif;
+    padding: 60px;
+    width: 100%;
+  }
+
+  .container-linha {
+    display: block;
+    align-items: end;
+    flex-direction: row;
+
+  }
+
+  .campo-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .field {
+    background-color: #d6d6d6;
+    border-radius: 50px;
+    padding: 20px;
+    width: 50%;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+  }
+
+  .anexo {
+    background-color: #d6d6d6;
+    border-radius: 50px;
+    padding: 15px;
+    width: 50%;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+  }
+
+  .setor {
+    background-color: #d6d6d6;
+    border-radius: 50px;
+    padding: 20px;
+    width: 50%;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+  }
+
+  .container-linha3 {
+    display: block;
+    align-items: end;
+    flex-direction: row;
+    margin-bottom: 15px;
+  }
+
+  .tempo {
+    background-color: #d6d6d6;
+    border-radius: 50px;
+    padding: 20px;
+    width: 50%;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+  }
+
+  .tipo {
+    background-color: #d6d6d6;
+    border-radius: 50px;
+    padding: 20px;
+    width: 60%;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+  }
+
+  /*BOTAO DE CONFIRMAR*/
+  .botao {
+
+    text-align: center;
+    margin: 20px;
+    width: 30%;
+    padding: 15px;
+    background-color: #000000;
+    color: #fff;
+    border: none;
+    border-radius: 0px;
+    cursor: pointer;
+    font-size: 10px;
+  }
+
+  .botao a:link {
+    text-decoration: none;
+    color: #ffffff;
+  }
+
+  .botao a:visited {
+    color: #ffffff;
+  }
 }
 
-.container-pagina {
-  font-family: "Poppins", sans-serif;
-  padding: 32px;
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  width: 100%;
-}
+@media screen and (min-width: 1201px) {
 
-.container-linha {
-  display: flex;
-  align-items: end;
-  flex-direction: row;
-  gap: 460px;
-  margin: 20px;
-}
+  body {
+    margin: 0px;
+    background-color: #ffffff;
+    font-family: "Poppins", sans-serif;
+  }
 
-.campo-container {
-  display: flex;
-  flex-direction: column;
-}
+  /*menu*/
+  .menu {
+    width: 100%;
+    margin-left: 20px;
+    text-align: right;
+    list-style: none;
+    display: flex;
+    justify-content: flex-end;
+    margin: 0;
+    background-color: #4D4C4C;
+    flex-direction: row;
+    align-items: center;
+    padding: 12px 0px;
+  }
 
-.field {
-  background-color: #cecece;
-  border-radius: 50px;
-  padding: 30px;
-  width: 250%;
-}
+  .menu li {
+    margin-right: 18px;
+    color: #ffffff;
+    cursor: pointer;
+    font-weight: bold;
+    margin-top: 0px;
+    transition: color 0.3s, text-shadow 0.3s;
 
-.anexo {
-  background-color: #cecece;
-  border-radius: 50px;
-  padding: 30px;
-  width: 160%;
-}
+  }
 
-.setor {
-  background-color: #cecece;
-  border-radius: 50px;
-  padding: 30px;
-  width: 185%;
-}
-.container-linha3 {
-  display: flex;
-  align-items: end;
-  flex-direction: row;
-  gap: 515px;
-  margin: 20px;
-}
+  a:link {
+    text-decoration: none;
+    color: #FFFFFF;
+  }
 
-.tempo {
-  background-color: #cecece;
-  border-radius: 50px;
-  padding: 30px;
-  width: 320%;
-}
+  a:visited {
+    color: #FFFFFF;
+  }
 
-.tipo {
-  background-color: #cecece;
-  border-radius: 50px;
-  padding: 30px;
-  width: 275%;
-}
+  a:hover {
+    color: #DFC13F;
+    /* Altera a cor do texto ao passar o mouse */
+  }
 
-.botao {
-  display: flex;
-  align-items: end;
-  flex-direction: column;
-  margin-right: -35%;
-}
+  /*TÍTULO E CAMPOS DE PREENCHIMENTO*/
+  .container-pagina {
+    align-items: center;
+    font-family: "Poppins", sans-serif;
+    padding: 60px 0px;
+    width: 100%;
+  }
 
-button {
-  background-color: #4d464c;
-  color: #ffffff;
-  width: 15%;
-  padding: 15px;
-}
+  .container-linha {
+    padding: 0px 30px;
+    display: flex;
+    align-items: end;
+    flex-direction: row;
+    gap: 460px;
+  }
 
-.menu {
-  list-style: none;
-  display: flex;
-  justify-content: flex-end;
-  padding: 16px;
-  margin: 0;
-  margin-right: 10px;
-}
+  .campo-container {
+    display: flex;
+    flex-direction: column;
+  }
 
-.menu li {
-  margin-right: 18px;
-  cursor: pointer;
-  font-weight: bold;
-  margin-top: 10px;
-  transition: color 0.3s, text-shadow 0.3s;
-}
+  .field {
+    background-color: #d6d6d6;
+    border-radius: 50px;
+    padding: 20px;
+    width: 250%;
+    margin-bottom: 5px;
+    border: 1px solid #ccc;
+  }
 
-.menu li:hover {
-  color: #dfc13f; /* Altera a cor do texto ao passar o mouse */
-}
+  .anexo {
+    background-color: #d6d6d6;
+    border-radius: 50px;
+    padding: 15px;
+    width: 170%;
+    margin-bottom: 5px;
+    border: 1px solid #ccc;
+  }
 
-li {
-  font-weight: 400 !important;
+  .setor {
+    background-color: #d6d6d6;
+    border-radius: 50px;
+    padding: 20px;
+    width: 180%;
+    margin-bottom: 5px;
+    border: 1px solid #ccc;
+  }
+
+  .container-linha3 {
+    padding: 0px 30px;
+    display: flex;
+    align-items: end;
+    flex-direction: row;
+    gap: 515px;
+    margin-bottom: 5px;
+  }
+
+  .tempo {
+    background-color: #d6d6d6;
+    border-radius: 50px;
+    padding: 20px;
+    width: 345%;
+    margin-bottom: 5px;
+    border: 1px solid #ccc;
+  }
+
+  .tipo {
+    background-color: #d6d6d6;
+    border-radius: 50px;
+    padding: 20px;
+    width: 275%;
+    margin-bottom: 5px;
+    border: 1px solid #ccc;
+  }
+
+  /*BOTAO DE CONFIRMAR*/
+  .botao {
+    position: absolute;
+    top: 70%;
+    Left: 70%;
+    text-align: center;
+    width: 15%;
+    padding: 15px;
+    background-color: #000000;
+    color: #fff;
+    border: none;
+    border-radius: 0px;
+    cursor: pointer;
+    font-size: 15px;
+  }
+
+  .botao a:link {
+    text-decoration: none;
+    color: #ffffff;
+  }
+
+  .botao a:visited {
+    color: #ffffff;
+  }
 }
