--- a/codigo-fonte/area-logada/home-colaborador/home-colaborador.css
+++ b/codigo-fonte/area-logada/home-colaborador/home-colaborador.css
@@ -1,65 +1,113 @@
+
+/* CABEÇALHO */
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
-
 
 .menu {
     width: 100%;
     text-align: right;
-}
-
-.container {
-    padding: 28px 30px 30px 18px;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-}
-
-.menu {
     list-style: none;
     display: flex;
     justify-content: flex-end;
     padding: 16px;
     margin: 0;
     margin-right: 10px;
+    background-color: #4D4C4C;
+    flex-direction: row;
+    align-items: center;
+    padding: 12px 12px;
 }
 
 .menu li {
     margin-right: 18px;
+    color: #ffffff;
     cursor: pointer;
     font-weight: bold;
-    margin-top: 10px;
+    margin-top: 0px;
     transition: color 0.3s, text-shadow 0.3s;
 }
 
-.menu li:hover {
-    color: #dfc13f;
-    /* Altera a cor do texto ao passar o mouse */
+a:link {
+    text-decoration: none;
+    color:#FFFFFF;
 }
 
-li {
-    font-weight: 400 !important;
+a:visited {
+    color:#FFFFFF;
 }
 
-section.sobre {
-    height: calc(100% - 200px);
-    position: relative;
-
+a:hover {
+    color: #DFC13F; /* Altera a cor do texto ao passar o mouse */
 }
 
-.extras {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 200px;
-    height: 200px;
-    background-color: yellow;
+
+/* CORPO */
+
+body {
+    background-color: #4D4C4C
 }
 
-img {
+.container {
     width: 100%;
-    height: auto;
+    margin: auto;
+    position: relative;
+    color: #ffffff;
+    font-family: 'Poppins Medium', sans-serif;
+}
+
+.container img {
+    width: 100%;
+    height: 600px;
+    opacity: 50%;
+}
+
+.titulo {
+    position: absolute;
+    top: 20%;
+    Left: 27%;
+    transition: translate(-50%,-50%);
+    text-align: center;
+    font-size: 50px;
+    padding: 10px; 
+}
+
+.subtitulo {
+    position: absolute;
+    top: 35%;
+    Left: 27%;
+    transition: translate(-50%,-50%);
+    text-align: center;
+    font-size: 20px;
+    padding: 10px; 
+}
+
+/*BOTÃO SAIBA MAIS SOBRE*/
+.button {
+    position: absolute;
+    top: 65%;
+    Left: 43%;
+    text-align: center;
+    width: 15%;
+    padding: 10px;
+    background-color: #DFC13F;
+    color: #000000;
+    border: none;
+    border-radius: 0px;
+    cursor: pointer;
+    font-size: 15px;
+    
+}
+
+.button a:link {
+    text-decoration: none;
+    color: #000000;
+}
+
+.button a:visited {
+    color: #000000;
 }
