--- a/codigo-fonte/area-logada/meus-registros/meus-registros.css
+++ b/codigo-fonte/area-logada/meus-registros/meus-registros.css
@@ -1,72 +1,175 @@
 /* CABEÇALHO */
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
 }
 
 .menu {
-    width: 100%;
-    text-align: right;
-    list-style: none;
-    display: flex;
-    justify-content: flex-end;
-    padding: 16px;
-    margin: 0;
-    margin-right: 10px;
-    background-color: #4D4C4C;
-    flex-direction: row;
-    align-items: center;
-    padding: 12px 12px;
+  width: 100%;
+  text-align: right;
+  list-style: none;
+  display: flex;
+  justify-content: flex-end;
+  padding: 16px;
+  margin: 0;
+  margin-right: 10px;
+  background-color: #4d4c4c;
+  flex-direction: row;
+  align-items: center;
+  padding: 12px 12px;
 }
 
 .menu li {
-    margin-right: 18px;
-    color: #ffffff;
-    cursor: pointer;
-    font-weight: bold;
-    margin-top: 0px;
-    transition: color 0.3s, text-shadow 0.3s;
-
+  margin-right: 18px;
+  color: #ffffff;
+  cursor: pointer;
+  font-weight: bold;
+  margin-top: 0px;
+  transition: color 0.3s, text-shadow 0.3s;
 }
 
 a:link {
-    text-decoration: none;
-    color:#FFFFFF;
+  text-decoration: none;
+  color: #ffffff;
 }
 
 a:visited {
-    color:#FFFFFF;
+  color: #ffffff;
 }
 
 a:hover {
-    color: #DFC13F; /* Altera a cor do texto ao passar o mouse */
-}
-
-/*BOTÃO SAIBA MAIS SOBRE*/
-.button {
-    position: absolute;
-    top: 20%;
-    Left: 10%;
-    transition: translate(-50%,-50%);
-    text-align: center;
-    width: 15%;
-    padding: 10px;
-    background-color: #DFC13F;
-    color: #000000;
-    border: none;
-    border-radius: 0px;
-    cursor: pointer;
-    font-size: 15px;
+  color: #dfc13f; /* Altera a cor do texto ao passar o mouse */
 }
 
 .button a:link {
-    text-decoration: none;
-    color: #000000;
+  text-decoration: none;
+  color: #000000;
 }
 
 .button a:visited {
-    color: #000000;
+  color: #000000;
+}
+
+.global-container {
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
+  padding: 12px 62px 12px 62px;
+}
+
+.user-pic-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.avatar-size {
+  border-radius: 50px;
+  width: 62px;
+  height: 62px;
+}
+
+.icon {
+  width: 42px;
+}
+
+.avatar-msg-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
+
+.default-text {
+  font-size: 21px;
+  font-weight: bolder;
+}
+
+.new-register-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 16px;
+}
+
+.grey-wrapper {
+  border-radius: 12px;
+  background-color: #f6f6f9;
+  padding: 36px;
+}
+
+.grey-wrapper-darker {
+  border-radius: 12px;
+  background-color: #cecece;
+  padding: 36px;
+}
+
+.yellow-circle {
+  background-color: #f2c551;
+  border-radius: 50px;
+  width: 36px;
+  height: 36px;
+}
+
+.plus-sign {
+  font-size: 32px;
+  text-align: center;
+}
+
+.chart-row-container {
+  display: flex;
+  flex-direction: row;
+  gap: 64px;
+}
+
+.lighter-rectangle {
+  width: 300px;
+  border-radius: 12px;
+  background-color: #f6f6f9;
+  padding: 24px;
+}
+
+.rectangle {
+  position: relative;
+  top: -15px;
+  width: 300px;
+  border-radius: 12px;
+  background-color: #cecece;
+  padding: 24px;
+}
+
+.rectangle-text {
+  text-align: center;
+  font-size: 18px;
+  font-weight: bolder;
+}
+
+.training-column-container {
+  display: flex;
+  flex-direction: column;
+  gap: 22px;
+  align-items: center;
+}
+
+.training-rectangle-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.rectangle-row {
+  position: relative;
+  left: -15px;
+  width: 150px;
+  border-radius: 12px;
+  background-color: #cecece;
+  padding: 24px;
+}
+
+.ligther-rectangle-row {
+  width: 150px;
+  border-radius: 12px;
+  background-color: #f6f6f9;
+  padding: 24px;
 }
