--- a/codigo-fonte/area-logada/sobre/sobre.css
+++ b/codigo-fonte/area-logada/sobre/sobre.css
@@ -1,17 +1,116 @@
 /* CABEÇALHO */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
 .menu {
+  width: 100%;
+  text-align: right;
+  list-style: none;
+  display: flex;
+  justify-content: flex;
+  padding: 16px;
+  margin: 0;
+  margin-right: 10px;
+  background-color: #4D4C4C;
+  flex-direction: row;
+  align-items: center;
+  padding: 12px 12px;
+}
+
+.menu li {
+  margin-right: 18px;
+  color: #ffffff;
+  cursor: pointer;
+  font-weight: bold;
+  margin-top: 0px;
+  transition: color 0.3s; 
+  text-shadow: color 0.3s;
+}
+
+a:link {
+  text-decoration: none;
+  color:#FFFFFF;
+}
+
+a:visited {
+  color:#FFFFFF;
+}
+
+a:hover {
+  color: #DFC13F; /* Altera a cor do texto ao passar o mouse */
+}
+
+/* CORPO */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+  background-color: #FFFFFF;
+}
+
+.content {
+  display: flex;
+  align-items: center;
+  position: relative; /* Crie um contexto de posicionamento */
+}
+
+.yellow-box {
+  background-color: #DFC13F;
+  width: 700px;
+  height: 520px;
+  padding: 100px;
+  padding-right: 200px;
+  margin-left: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 25px;
+}
+
+.text-container {
+  text-align: justify; /* Alinhar o texto à esquerda */
+  font-weight: bold;
+  font-family: 'Poppins', sans-serif;
+  font-size: 15px
+}
+
+.image-container {
+  position: relative; /* Crie um contexto de posicionamento para a imagem */
+}
+
+.image {
+  position: absolute; /* Posicione a imagem de forma absoluta */
+  top: -210px;
+  right: -450px; /* Ajuste conforme necessário para controlar a sobreposição */
+  width: 588px;
+  height: 480px;
+}
+
+.image img {
+  width: 650px;
+  height: 450px;
+}
+
+@media screen and (max-width: 850px) {
+  /* CABEÇALHO */
+  * {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+   font-family: 'Poppins', sans-serif;
+  }
+
+  .menu {
     width: 100%;
     text-align: right;
     list-style: none;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex;
     padding: 16px;
     margin: 0;
     margin-right: 10px;
@@ -19,78 +118,67 @@
     flex-direction: row;
     align-items: center;
     padding: 12px 12px;
-}
+  }
 
-.menu li {
-    margin-right: 18px;
-    color: #ffffff;
-    cursor: pointer;
-    font-weight: bold;
-    margin-top: 0px;
-    transition: color 0.3s, text-shadow 0.3s;
-}
+  .menu li {
+   margin-right: 18px;
+   color: #ffffff;
+   cursor: pointer;
+   font-weight: bold;
+   margin-top: 0px;
+   transition: color 0.3s;
+   text-shadow: color 0.3s;
+  }
 
-a:link {
-    text-decoration: none;
-    color:#FFFFFF;
-}
+  a:link {
+   text-decoration: none;
+   color:#FFFFFF;
+  }
 
-a:visited {
-    color:#FFFFFF;
-}
+  a:visited {
+   color:#FFFFFF;
+  }
 
-a:hover {
-    color: #DFC13F; /* Altera a cor do texto ao passar o mouse */
-}
-
-/* CORPO */
-body {
+  a:hover {
+   color: #DFC13F; /* Altera a cor do texto ao passar o mouse */
+  }
+  
+  /* CORPO */
+  body {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
     background-color: #FFFFFF;
-}
-
-.content {
+  }
+  
+  .content {
     display: flex;
     align-items: center;
     position: relative; /* Crie um contexto de posicionamento */
-}
-
-.yellow-box {
+  }
+  
+  .yellow-box {
     background-color: #DFC13F;
-    width: 700px;
-    height: 520px;
-    padding: 100px;
-    padding-right: 200px;
-    margin-left: 100px;
+    width: 500px;
+    height: 700px;
+    padding: 25px;
+    padding-right: 25px;
+    margin-left: 25px;
+    margin-top: 25px;
     display: flex;
-    flex-direction: column;
+    flex-direction: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 25px;
-}
-
-.text-container {
+  }
+  
+  .text-container {
     text-align: justify; /* Alinhar o texto à esquerda */
     font-weight: bold;
     font-family: 'Poppins', sans-serif;
     font-size: 15px
-}
-
-.image-container {
-    position: relative; /* Crie um contexto de posicionamento para a imagem */
-}
-
-.image {
-    position: absolute; /* Posicione a imagem de forma absoluta */
-    top: -210px;
-    right: -450px; /* Ajuste conforme necessário para controlar a sobreposição */
-    width: 588px;
-    height: 480px;
-}
-
-.image img {
-    width: 650px;
-    height: 450px;
+  }
+  
+  .image-container {
+    display: none;
+  }
 }
