--- a/codigo-fonte/area-logada/meus-registros/meus-registros.css
+++ b/codigo-fonte/area-logada/meus-registros/meus-registros.css
@@ -173,3 +173,27 @@ a:hover {
   background-color: #f6f6f9;
   padding: 24px;
 }
+
+.rectangle-text-2021 {
+  text-align: center;
+  font-size: 18px;
+  font-weight: bolder;
+}
+
+.rectangle-text-2022 {
+  text-align: center;
+  font-size: 18px;
+  font-weight: bolder;
+}
+
+.rectangle-text-2023 {
+  text-align: center;
+  font-size: 18px;
+  font-weight: bolder;
+}
+
+.rectangle-text-total {
+  text-align: center;
+  font-size: 18px;
+  font-weight: bolder;
+}
