--- a/codigo-fonte/area-logada/adicionar-registro/adicionar-registro.css
+++ b/codigo-fonte/area-logada/adicionar-registro/adicionar-registro.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,200;9..40,300&family=Poppins:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,200;9..40,300&family=Poppins:wght@500&display=swap");
 @media screen and (max-width: 1200px) {
-
   body {
     margin: 0;
     background-color: #ffffff;
@@ -18,7 +17,7 @@
     padding: 16px;
     margin: 0;
     margin-right: 10px;
-    background-color: #4D4C4C;
+    background-color: #4d4c4c;
     flex-direction: row;
     align-items: center;
     padding: 12px 12px;
@@ -35,15 +34,16 @@
 
   a:link {
     text-decoration: none;
-    color: #FFFFFF;
+    color: #ffffff;
   }
 
   a:visited {
-    color: #FFFFFF;
+    color: #ffffff;
   }
 
   a:hover {
-    color: #DFC13F; /* Altera a cor do texto ao passar o mouse */
+    color: #dfc13f;
+    /* Altera a cor do texto ao passar o mouse */
   }
 
   /*TÍTULO E CAMPOS DE PREENCHIMENTO*/
@@ -141,7 +141,6 @@
 }
 
 @media screen and (min-width: 1201px) {
-
   body {
     margin: 0px;
     background-color: #ffffff;
@@ -157,7 +156,7 @@
     display: flex;
     justify-content: flex-end;
     margin: 0;
-    background-color: #4D4C4C;
+    background-color: #4d4c4c;
     flex-direction: row;
     align-items: center;
     padding: 12px 0px;
@@ -174,15 +173,16 @@
 
   a:link {
     text-decoration: none;
-    color: #FFFFFF;
+    color: #ffffff;
   }
 
   a:visited {
-    color: #FFFFFF;
+    color: #ffffff;
   }
 
   a:hover {
-    color: #DFC13F; /* Altera a cor do texto ao passar o mouse */
+    color: #dfc13f;
+    /* Altera a cor do texto ao passar o mouse */
   }
 
   /*TÍTULO E CAMPOS DE PREENCHIMENTO*/
@@ -264,7 +264,7 @@
   .botao {
     position: absolute;
     top: 70%;
-    Left: 70%;
+    left: 70%;
     text-align: center;
     width: 15%;
     padding: 15px;
