--- a/codigo-fonte/area-logada/home-colaborador/home-colaborador.css
+++ b/codigo-fonte/area-logada/home-colaborador/home-colaborador.css
@@ -1,5 +1,6 @@
 /* CABEÇALHO */
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,200;9..40,300&family=Poppins:wght@500&display=swap");
 * {
     margin: 0;
     padding: 0;
